# mcap2json

./: README.md  pyproject.toml
mcap2json/: .gitignore  Containerfile  Makefile  README.md  compose.yml
mcap2json/workspace/: mcap2json.py
plotjuggler/: .gitignore  README.md  play_plotjuggler.py
src/mcap2json/: Containerfile  Makefile  compose.yml  mcap2json.py
src/plotjuggler/: .gitignore  play_plotjuggler.py
