[project]
name = "mcap2json"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcap>=1.3.0",
    "mcap-ros2-support>=0.5.5",
    "tqdm>=4.67.1",
]
[tool.setuptools]
packages = ["src/mcap2json", "src/play_plotjuggler"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcap2json", "play_plotjuggler"]
